[gd_scene load_steps=5 format=2]

[ext_resource path="res://title/buttons/button_quit.tscn" type="PackedScene" id=1]
[ext_resource path="res://title/more_titels/win_title.tscn" type="PackedScene" id=2]
[ext_resource path="res://title/next_level.gd" type="Script" id=3]
[ext_resource path="res://title/buttons/button_next.tscn" type="PackedScene" id=4]

[node name="next_level" type="Node"]
pause_mode = 2
script = ExtResource( 3 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0431373, 0.0313726, 0.231373, 0.556863 )

[node name="title_margin" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 40.0
margin_top = 178.0
margin_right = -40.0
margin_bottom = -104.0
custom_constants/margin_right = 0
custom_constants/margin_top = 5
custom_constants/margin_left = 0

[node name="menu" type="VBoxContainer" parent="title_margin"]
margin_top = 5.0
margin_right = 520.0
margin_bottom = 478.0
custom_constants/separation = 30

[node name="win_title" parent="title_margin/menu" instance=ExtResource( 2 )]
anchor_right = 0.0
margin_right = 520.0
margin_bottom = 115.0

[node name="button_next" parent="title_margin/menu" instance=ExtResource( 4 )]
anchor_right = 0.0
margin_top = 145.0
margin_right = 520.0
margin_bottom = 200.0

[node name="button_quit" parent="title_margin/menu" instance=ExtResource( 1 )]
anchor_right = 0.0
margin_top = 230.0
margin_right = 520.0
margin_bottom = 285.0

[connection signal="pressed" from="title_margin/menu/button_next" to="." method="_on_button_next_pressed"]
[connection signal="pressed" from="title_margin/menu/button_quit" to="." method="_on_button_quit_pressed"]
